crates/pardosa-schema/tests/compile_fail/btreemap_box_key.stderr
error: EVT-014: GenomeSafe: Map- and set-shaped event payloads are forbidden by Solon doctrine (map- and set-shaped payloads are non-canonical): enumerate keys as named struct fields or an enum, or store the map outside the event store.
 --> tests/compile_fail/btreemap_box_key.rs:5:11
  |
5 |     data: BTreeMap<Box<String>, u32>,
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^
